# deep_learning_implementations_101

./: .gitignore  README.md  pyproject.toml
laplacian_example/: laplacian.ipynb
transformers/: classification copy.py  classification.py  classification_transformer.py  self_attention.ipynb  test_dataset.py  transformer_block.py  tutorial.ipynb
transformers/runs/: events.out.tfevents.1754759343.Antonios-MacBook-Pro-2.local.58910.0  events.out.tfevents.1754759506.Antonios-MacBook-Pro-2.local.61007.0  events.out.tfevents.1754759543.Antonios-MacBook-Pro-2.local.61439.0
vision_transformer/: vision_transformer.ipynb
