[project]
name = "deep-learning-implementations-101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "absl-py>=2.3.1",
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.12.15",
    "aiosignal>=1.4.0",
    "appnope>=0.1.4",
    "asttokens>=3.0.0",
    "async-timeout>=5.0.1",
    "attrs>=25.3.0",
    "certifi>=2025.8.3",
    "charset-normalizer>=3.4.3",
    "comm>=0.2.3",
    "contourpy>=1.3.0",
    "cycler>=0.12.1",
    "datasets>=2.14.4",
    "debugpy>=1.8.16",
    "decorator>=5.2.1",
    "dill>=0.3.7",
    "exceptiongroup>=1.3.0",
    "executing>=2.2.1",
    "filelock>=3.19.1",
    "fonttools>=4.59.2",
    "frozenlist>=1.7.0",
    "fsspec>=2025.7.0",
    "grpcio>=1.74.0",
    "hf-xet>=1.1.9",
    "huggingface-hub>=0.34.4",
    "idna>=3.10",
    "importlib-metadata>=8.7.0",
    "importlib-resources>=6.5.2",
    "ipykernel>=6.30.1",
    "ipython>=8.18.1",
    "jedi>=0.19.2",
    "jinja2>=3.1.6",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.8.1",
    "kiwisolver>=1.4.7",
    "markdown>=3.8.2",
    "markupsafe>=3.0.2",
    "matplotlib>=3.9.4",
    "matplotlib-inline>=0.1.7",
    "mpmath>=1.3.0",
    "multidict>=6.6.4",
    "multiprocess>=0.70.15",
    "nest-asyncio>=1.6.0",
    "networkx>=3.2.1",
    "numpy>=2.0.2",
    "packaging>=25.0",
    "pandas>=2.3.2",
    "parso>=0.8.5",
    "pexpect>=4.9.0",
    "pillow>=11.3.0",
    "platformdirs>=4.4.0",
    "prompt-toolkit>=3.0.52",
    "propcache>=0.3.2",
    "protobuf>=6.32.0",
    "psutil>=7.0.0",
    "ptyprocess>=0.7.0",
    "pure-eval>=0.2.3",
    "pyarrow>=21.0.0",
    "pygments>=2.19.2",
    "pyparsing>=3.2.3",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "pyzmq>=27.0.2",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "six>=1.17.0",
    "stack-data>=0.6.3",
    "sympy>=1.14.0",
    "tensorboard>=2.20.0",
    "tensorboard-data-server>=0.7.2",
    "torch>=2.8.0",
    "torchtext>=0.18.0",
    "torchvision>=0.23.0",
    "tornado>=6.5.2",
    "tqdm>=4.67.1",
    "traitlets>=5.14.3",
    "typing-extensions>=4.15.0",
    "tzdata>=2025.2",
    "urllib3>=2.5.0",
    "wcwidth>=0.2.13",
    "werkzeug>=3.1.3",
    "xxhash>=3.5.0",
    "yarl>=1.20.1",
    "zipp>=3.23.0",
]
